fix: app window still gets hidden in some cases
includes using normal dialogs functionality for showing detailed state
otherwise, dialog could get hidden behind the window on Mac
in any case, it's more consistent this way and actually looks better

also includes a few improvements to dialogs functionality itself

--- a/src/renderer/dialog/dialog.css
+++ b/src/renderer/dialog/dialog.css
@@ -6,6 +6,14 @@ body {
     overflow-y: hidden;
 }
 
+p {
+    white-space: pre-line;
+}
+
+.visibility-hidden {
+    visibility: hidden;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         color: var(--white);
